[gd_scene load_steps=4 format=2]

[ext_resource path="res://Fonts/orange kid.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Misc/Online_Multiplayer_Loading_Screen.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="Online_Multiplayer_Loading_Screen" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 480.0
margin_bottom = 270.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Loading_Text" type="Label" parent="."]
margin_top = 125.0
margin_right = 480.0
margin_bottom = 145.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Loading Online Multiplayer..."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer_1" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Timer_2" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Timer_3" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Timer_4" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[connection signal="timeout" from="Timer_1" to="." method="_on_Timer_1_timeout"]
[connection signal="timeout" from="Timer_2" to="." method="_on_Timer_2_timeout"]
[connection signal="timeout" from="Timer_3" to="." method="_on_Timer_3_timeout"]
[connection signal="timeout" from="Timer_4" to="." method="_on_Timer_4_timeout"]
